--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ askama = "0.12"
 askama_axum = "0.4"
 axum-extra = { version = "0.9", features = ["cookie"] }
 time = "0.3"
+lettre = { version = "0.10", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
